--- a/templates/paragraph--du-tuition-calculator.html.twig
+++ b/templates/paragraph--du-tuition-calculator.html.twig
@@ -1,10 +1,3 @@
-{%
-  set classes = [
-    'paragraph',
-    'paragraph--type--' ~ paragraph.bundle|clean_class,
-    view_mode ? 'paragraph--view-mode--' ~ view_mode|clean_class
-  ]
-%}
-<div{{ attributes.addClass(classes) }}>
+<div{{ attributes.addClass('paragraph', 'paragraph--type--du-tuition-calculator') }}>
   {{ content }}
 </div>
